# nvvmir-samples

./: CMakeLists.txt  LICENSE.txt  README.md  README.txt
common/include/: drvapi_error_string.h
cuda-shared-memory/: extern_shared_memory.ll  shared_memory.ll
device-side-launch/: CMakeLists.txt  Device-Side-Launch.txt  dsl.c  gpu32.ll  gpu64.ll
syscalls/: malloc-free.ll  vprintf.ll
uvmlite/: CMakeLists.txt  README.txt  uvmlite.c  uvmlite64.ll
